Fix: Cahnge way to hide images on smaller screen as now have each image wrapped inan <a> tag to use as a link back to the home page.

--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -307,7 +307,7 @@ footer {
   
 
 @media screen and (max-width: 425px) {
-    .logo img:nth-child(n+2){
+    #image2, #image3{
         display: none;
     }
 }
